<resources>

    <!--    Application Level -->
    <string name="app_name">SaveYourWork</string>
    <string name="developer_name">Sushant More</string>
    <string name="developer_username">\@moresushant48</string>
    <string name="purpose">SaveYourWork provides a Convenient and Secure File Sharing Service. Upload your files and be able to access them from anywhere in the world, with ease.</string>
    <string name="source_heroku">https://saveyourwork.herokuapp.com/</string>

    <!--    Navigation Drawer -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_group_authenticate">Authentication</string>
    <string name="drawer_group_info">Info</string>

    <!--    Activity Titles -->
    <string name="activityLogout">Logout</string>

    <!--    Fragment Titles -->
    <string name="fragAccount">Account</string>
    <string name="fragAbout">About</string>
    <string name="fragSettings">Settings</string>
    <string name="fragFiles">My Files</string>
    <string name="fragPublicSearch">Public</string>
    <string name="fragSharedSearch">Shared</string>

    <!--    Theme -->
    <string name="darkMode">Enable Dark Mode</string>

    <!--   Menu -->
    <string name="menuPrivate">Private</string>
    <string name="menuPublic">Public</string>
    <string name="menuProtected">Protected</string>
    <string name="menuSearch">Search</string>

    <!--    Settings -->
    <string name="fingerprint">Fingerprint Unlock</string>
    <string name="fingerprintSummary">Use System Fingerprint to Unlock the App.</string>
    <string name="security">Security</string>
    <string name="theme">Theme</string>
    <string name="darkModeSummary">Immediately applies Dark Mode by restarting app.</string>

    <!--    Other -->
    <string name="empty_storage">Empty Storage</string>
    <string name="resetPassword">Reset Password</string>
    <string name="newPassword">New Password</string>
    <string name="submit">Submit</string>
    <string name="empty_edittext">Please fill the form properly.</string>
    <string name="rulesPassword">Note : Minimun 3 - Maximum 15 characters allowed.</string>
    <string name="currentPassword">Current Password</string>
    <string name="loading">Loading..</string>
    <string name="genKey">New Shared Key</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="delete_account">Delete Account</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id">saveyourwork</string>

</resources>
