<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/theme"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:id="@+id/spDarkMode"
            android:defaultValue="false"
            android:key="@string/darkMode"
            android:summary="@string/darkModeSummary"
            android:title="@string/darkMode"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/security"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:id="@+id/spFingerprint"
            android:defaultValue="false"
            android:key="@string/fingerprint"
            android:summary="@string/fingerprintSummary"
            android:title="@string/fingerprint"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>